@@ -83,7 +83,7 @@ text-align: right;
       </td>
       <td style="vertical-align: top;">John Jacobsen <span
  style="font-family: monospace;"></span><br>
-Last revision 7/18/2005<br>
+Last revision 11/23/2005<br>
       <span style="font-family: monospace;">$Id: api.html,v 1.3
 2005/06/10 16:32:32 jacobsen Exp $</span><br>
       </td>
@@ -154,23 +154,6 @@ messages from the previous run (</font><font style="font-size: 11pt;"
 voltage). <b>Flasher Board runs require special DAC settings.</b></font><br>
     <br>
   </li>
-  <li><span style="color: rgb(153, 153, 153);"></span>If running with
-RoadGrader
-compression, tell domapp to collect pedestal data <span
- style="color: rgb(153, 153, 153);">(<a
- href="#EXPCONTROL_DO_PEDESTAL_COLLECTION">EXPCONTROL_DO_PEDESTAL_COLLECTION</a>)</span>.&nbsp;
-    <span style="font-weight: bold;">Do this before you turn on high
-voltage!</span>&nbsp; If desired, read out pedestal averages <span
- style="color: rgb(153, 153, 153);">(<a
- href="#EXPCONTROL_GET_PEDESTAL_AVERAGES">EXPCONTROL_GET_PEDESTAL_AVERAGES</a>)</span>
-or number of triggers collected <span
- style="color: rgb(153, 153, 153);">(<a
- href="#EXPCONTROL_GET_NUM_PEDESTALS">EXPCONTROL_GET_NUM_PEDESTALS</a>)</span>.&nbsp;
-Set the appropriate RoadGrader threshold <span
- style="color: rgb(153, 153, 153);">(<a
- href="#DATA_ACC_SET_BASELINE_THRESHOLD">DATA_ACC_SET_BASELINE_THRESHOLD</a>)</span>.
-  </li>
-  <br>
   <li><font size="3">Set DOM high voltage, <b>unless doing Flasher
 Board run</b>.</font> <span style="color: rgb(153, 153, 153);">Required
 messages: <a href="#DSC_ENABLE_PMT_HV">DSC_ENABLE_PMT_HV</a>, <a
@@ -204,11 +187,7 @@ PMT triggers and also for digitizing LED currents in flasher board
 data.&nbsp; Set data compression mode and data format type (<span
  style="color: rgb(153, 153, 153);"><a
  href="api.html#DATA_ACC_SET_DATA_FORMAT">DATA_ACC_SET_DATA_FORMAT</a>
-and <a href="api.html#DATA_ACC_SET_COMP_MODE">DATA_ACC_SET_COMP_MODE</a></span></font>&nbsp;
-Note: Do not <font size="3"><span style="color: rgb(153, 153, 153);"><a
- href="api.html#DATA_ACC_SET_COMP_MODE">DATA_ACC_SET_COMP_MODE</a> </span></font>before
-you <span style="color: rgb(153, 153, 153);"><a
- href="api.html#EXPCONTROL_DO_PEDESTAL_COLLECTION">EXPCONTROL_DO_PEDESTAL_COLLECTION</a></span>!!!).<br>
+and <a href="api.html#DATA_ACC_SET_COMP_MODE">DATA_ACC_SET_COMP_MODE</a></span></font>).<br>
   </li>
   <br>
   <li>If desired, enable supernova data collection with <font
@@ -566,16 +545,9 @@ formats, and one format could support multiple compression modes
     <tr>
       <td style="vertical-align: top; text-align: center;">1<br>
       </td>
-      <td style="vertical-align: top;">Road grader FPGA-based
-compression algorithm<br>
+      <td style="vertical-align: top;">Compressed data (delta
+compression)<br>
       </td>
-    </tr>
-    <tr>
-      <td
- style="vertical-align: top; color: rgb(153, 153, 153); text-align: center;">2<br>
-      </td>
-      <td style="vertical-align: top; color: rgb(153, 153, 153);">Delta-compression
-algorithm (NOT YET IMPLEMENTED) </td>
     </tr>
   </tbody>
 </table>
@@ -612,7 +584,7 @@ compression&nbsp; modes<br>
       <td style="vertical-align: top;">Default compression format
 (based on compression modes)<br>
       </td>
-      <td style="vertical-align: top;">1, 2<br>
+      <td style="vertical-align: top;">1<br>
       </td>
     </tr>
     <tr>
@@ -623,7 +595,7 @@ compression&nbsp; modes<br>
 (formatted directly as comes
 out of the FPGA, uncompressed)</td>
       <td style="vertical-align: top; color: rgb(153, 153, 153);">0 ..
-2 (NOT YET IMPLEMENTED)<br>
+1 (NOT YET IMPLEMENTED)<br>
       </td>
     </tr>
     <tr>
@@ -633,7 +605,7 @@ out of the FPGA, uncompressed)</td>
       <td style="vertical-align: top; color: rgb(153, 153, 153);">Raw +
 compressed<br>
       </td>
-      <td style="vertical-align: top; color: rgb(153, 153, 153);">1, 2<br>
+      <td style="vertical-align: top; color: rgb(153, 153, 153);">1<br>
       </td>
     </tr>
   </tbody>
@@ -665,11 +637,15 @@ DATA<small> (up to 4084 bytes)</small>:</span><span
   <tbody>
     <tr>
       <td colspan="1" rowspan="1" style="vertical-align: top;"><span
- style="font-family: helvetica,arial,sans-serif;">HEADER:<br>
-      </span>
+ style="font-family: helvetica,arial,sans-serif;"> </span>
       <table style="width: 100%; text-align: left;" border="1"
  cellpadding="2" cellspacing="2">
         <tbody>
+          <tr>
+            <td colspan="5" rowspan="1" style="vertical-align: top;"><span
+ style="font-style: italic;">DOMApp Header</span><br>
+            </td>
+          </tr>
           <tr>
             <td style="vertical-align: top;">Word 0:<br>
             </td>
@@ -700,6 +676,11 @@ header; BIG ENDIAN) </td>
  style="vertical-align: top; background-color: rgb(204, 204, 204);">Bits
 15..0: <span style="font-weight: bold;">Timestamp MSBs</span> of all
 hits in block (BIG ENDIAN) </td>
+          </tr>
+          <tr>
+            <td colspan="5" rowspan="1" style="vertical-align: top;"><span
+ style="font-style: italic;">Hit Data from FPGA</span><br>
+            </td>
           </tr>
           <tr>
             <td colspan="1" rowspan="4" style="vertical-align: top;">Word
@@ -751,19 +732,21 @@ length)<br>
   </tbody>
 </table>
 <br>
-Each of the concatenated "Hits" in the block conforms to "RoadGrader
-Compression Format" in the <a
+Each of the concatenated "Hits" in the hit data block conforms to "<a
+ href="http://docushare.icecube.wisc.edu/docushare/dsweb/Get/Document-16687/delta_123611_format_and_processes.pdf">Delta
+Compressor Data Format</a>" in the <a
  href="http://docushare.icecube.wisc.edu/docushare/dsweb/View/Collection-2465">DOM
-Firmware Directory</a> on DocuShare, except that Header WORD0 is
-removed.&nbsp; In particular, the <span style="font-weight: bold;">hit
+Firmware Directory</a> on DocuShare, except that Header WORD0 defined
+in that document is
+removed by domapp.&nbsp; In particular, the <span
+ style="font-weight: bold;">hit
 length</span> is encoded in bits 10..0
 of WORD1 (the first 11 bits of Hit <span style="font-style: italic;">x</span>,
-above).&nbsp; Header data (e.g., timestamps) in the HITS records are
-LITTLE ENDIAN per Joshua Sopher's <a
- href="http://docushare.icecube.wisc.edu/docushare/dsweb/Get/Document-16116/Road+Grader+Data+Format+And+Processes.pdf">compression
-document</a>, whereas the
-header values (as well as all the data created by domapp) are BIG
-ENDIAN by convention.<br>
+above).&nbsp; Unfortunately, header data (e.g., timestamps) in the HITS
+records are
+LITTLE ENDIAN per the Delta Compression document, whereas the domapp
+header values are BIG
+ENDIAN (all domapp values are big-endian by convention).<br>
 <br>
 Block length, including header and all hits, will be less than or equal
 to 4084
@@ -783,19 +766,39 @@ window.&nbsp; The <a href="#DSC_ENABLE_SN">DSC_ENABLE_SN</a> message
 lets you select SPE (0) or MPE (1) triggers as the basis of the data
 collection.&nbsp; The programmable dead time argument to DSC_ENABLE_SN
 causes the data collection to be disabled for a short period following
-a trigger (to screen out PMT afterpulsing, for example).<br>
+a trigger (to screen out PMT afterpulsing, for example).&nbsp; You'll
+have to start an actual run (<font size="3"><span
+ style="color: rgb(153, 153, 153);"><a
+ href="api.html#EXPCONTROL_BEGIN_RUN">EXPCONTROL_BEGIN_RUN</a></span></font>)
+before (nonzero) supernova triggers can be successfully read out.<br>
 <br>
 The data are read out via the <font style="font-size: 11pt;" size="2"><a
  href="#DATA_ACC_GET_SN_DATA">DATA_ACC_GET_SN_DATA</a> </font>message
-in the following block format:<br>
-<br>
+in the following block format.&nbsp; The format is compatible with the
+general scheme for monitoring data (see <a
+ href="http://docushare.icecube.wisc.edu/docushare/dsweb/Get/Document-3799">monitoring
+data format specification</a>), with a header consisting of a 2 byte
+block length, 2 byte format ID, 6 byte time stamp, all big-endian.<br>
+<big><br style="font-weight: bold;">
+<span style="font-weight: bold;">Supernova Block Data Format</span></big><br>
 <table style="text-align: left;" border="1" cellpadding="2"
  cellspacing="2">
   <tbody>
     <tr>
+      <td colspan="2" rowspan="1" style="vertical-align: top;"><span
+ style="font-weight: bold; font-style: italic;">Header</span><br>
+      </td>
+    </tr>
+    <tr>
       <td style="vertical-align: top;">US<br>
       </td>
       <td style="vertical-align: top;">block length<br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">US<br>
+      </td>
+      <td style="vertical-align: top;">format ID (300 decimal, 0x012C)<br>
       </td>
     </tr>
     <tr>
@@ -804,6 +807,11 @@ in the following block format:<br>
       <td style="vertical-align: top;">complete time stamp of time
 slice 0<br>
       </td>
+    </tr>
+    <tr>
+      <td colspan="2" rowspan="1" style="vertical-align: top;"><span
+ style="font-weight: bold; font-style: italic;">Scaler Data<br>
+      </span></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">UB<br>
@@ -833,7 +841,7 @@ slice 0<br>
   </tbody>
 </table>
 <br>
-In general, the timestamps for successive events are separated by 65536
+In general, the timestamps for successive slices are separated by 65536
 clock counts.&nbsp; The block will be populated until this condition
 fails or the maximum block size (4084 B) is reached, which ever comes
 first.<br>
@@ -1744,9 +1752,9 @@ Actual rate may be slightly lower because of rounding in the HAL.</span><br>
       <td colspan="4" width="566">
       <p align="left"> <span style="font-weight: bold;">Enable
 on-board pulser.&nbsp; Note that this changes the trigger configuration
-so that heartbeat events are NOT generated.&nbsp; Pulser is
-automatically disabled at the beginning of a run, so this message must
-be sent AFTER the run has started (<a href="#EXPCONTROL_BEGIN_RUN">EXPCONTROL_BEGIN_RUN</a>).</span><br>
+so that heartbeat events are NOT generated.&nbsp; Message must be sent
+AFTER the trigger type has been set (<a href="#DSC_SET_TRIG_MODE">DSC_SET_TRIG_MODE</a>)
+and before the run has started (<a href="#EXPCONTROL_BEGIN_RUN">EXPCONTROL_BEGIN_RUN</a>).</span><br>
       </p>
       </td>
     </tr>
@@ -2816,8 +2824,10 @@ DSC_GET_LC_CABLE_LEN first or this message will return an error!</span></span><b
 supernova data collection (fine-grained trigger rate meter).&nbsp;
 Deadtime (enforced period of inactivity after each trigger) is in units
 of nsec.&nbsp; Valid values are 6400 to 512000 inclusive.&nbsp; Mode is
-0 (SPE) or 1 (MPE).</b></font><font style="font-size: 11pt;" size="2"><b>
-      </b></font></p>
+0 (SPE) or 1 (MPE).&nbsp; To get actual triggers, you also must </b></font><font
+ size="3"><span style="color: rgb(153, 153, 153);"><a
+ href="api.html#EXPCONTROL_BEGIN_RUN">EXPCONTROL_BEGIN_RUN</a></span></font><font
+ style="font-size: 11pt;" size="2"><b> </b></font></p>
       </td>
     </tr>
   </tbody>
@@ -3024,206 +3034,6 @@ monitoring data <br>
 monitoring intervals.&nbsp; Times are in CPU clock ticks (40,000,000
 ticks/sec).&nbsp; HW_Ival is time between hardware records.&nbsp;
 SW_Ival is time between software config. records.<br>
-      </b></font></p>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<a name="DATA_ACC_SET_BASELINE_THRESHOLD"></a><br>
-<table style="page-break-before: auto;" border="1" bordercolor="#000000"
- cellpadding="4" cellspacing="0" width="576">
-  <thead><tr valign="top">
-    <th width="28">
-    <p style="">ID</p>
-    </th>
-    <th width="242">
-    <p style="">Subtype</p>
-    </th>
-    <th width="130">
-    <p style="">Input</p>
-    </th>
-    <th width="142">
-    <p style="">Output</p>
-    </th>
-  </tr>
-  </thead> <tbody>
-    <tr>
-      <td sdval="22" sdnum="1033;" width="28">
-      <p style="" align="right"> 16</p>
-      </td>
-      <td width="242">
-      <p style="" align="center"> <font style="font-size: 11pt;"
- size="2">DATA_ACC_SET_BASELINE_THRESHOLD<i><b><br>
-      </b></i></font></p>
-      </td>
-      <td valign="top" width="130">
-      <p style="" align="center"> </p>
-      <table style="width: 100%; height: 100%;" border="0"
- bordercolor="#000000" cellpadding="4" cellspacing="0">
-        <tbody>
-          <tr>
-            <td style="vertical-align: middle;">US<br>
-            </td>
-            <td colspan="1" rowspan="1" style="vertical-align: top;">FADC
-baseline threshold<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US<br>
-            </td>
-            <td colspan="1" rowspan="1" style="vertical-align: top;">baseline
-threshold, ATWD0 ch 0<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US<br>
-            </td>
-            <td style="vertical-align: top;">ATWD0 ch 1<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD0 ch 2<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD0 ch 3<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 0<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 1</td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 2<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 3<br>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      </td>
-      <td width="142">
-      <p style="" align="center"> <font style="font-size: 9pt;"
- size="2">-</font></p>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="4" width="566">
-      <p style="" align="left"> <font style="font-size: 11pt;" size="2"><b>Set
-baseline / RoadGrader threshold for hardware data compression (ATWD
-units).&nbsp; Must also do <a href="#EXPCONTROL_DO_PEDESTAL_COLLECTION">EXPCONTROL_DO_PEDESTAL_COLLECTION</a>.<br>
-      </b></font></p>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<br>
-<table style="page-break-before: auto;" border="1" bordercolor="#000000"
- cellpadding="4" cellspacing="0" width="576">
-  <thead><tr valign="top">
-    <th width="28">
-    <p style="">ID</p>
-    </th>
-    <th width="242">
-    <p style="">Subtype</p>
-    </th>
-    <th width="130">
-    <p style="">Input</p>
-    </th>
-    <th width="142">
-    <p style="">Output</p>
-    </th>
-  </tr>
-  </thead> <tbody>
-    <tr>
-      <td sdval="22" sdnum="1033;" width="28">
-      <p style="" align="right"> 17</p>
-      </td>
-      <td width="242">
-      <p style="" align="center"> <font style="font-size: 11pt;"
- size="2">DATA_ACC_GET_BASELINE_THRESHOLD<i><b><br>
-      </b></i></font></p>
-      </td>
-      <td width="130">
-      <p style="" align="center"> </p>
-      <div style="text-align: center;">-<br>
-      </div>
-      </td>
-      <td width="142">
-      <p style="" align="center"> </p>
-      <table style="width: 100%; height: 100%;" border="0"
- bordercolor="#000000" cellpadding="4" cellspacing="0">
-        <tbody>
-          <tr>
-            <td style="vertical-align: middle;">US<br>
-            </td>
-            <td colspan="1" rowspan="1" style="vertical-align: top;">FADC
-baseline threshold<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US<br>
-            </td>
-            <td colspan="1" rowspan="1" style="vertical-align: top;">baseline
-threshold, ATWD0 ch 0<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US<br>
-            </td>
-            <td style="vertical-align: top;">ATWD0 ch 1<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD0 ch 2<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD0 ch 3<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 0<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 1</td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 2<br>
-            </td>
-          </tr>
-          <tr>
-            <td style="vertical-align: middle;">US</td>
-            <td style="vertical-align: top;">ATWD1 ch 3<br>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="4" width="566">
-      <p style="" align="left"> <span style="font-weight: bold;">Fetch
-      </span><font style="font-size: 11pt;" size="2"><b>baseline /
-RoadGrader threshold for hardware data compression (ATWD units).&nbsp;
-Must also do <a href="api.html#EXPCONTROL_DO_PEDESTAL_COLLECTION">EXPCONTROL_DO_PEDESTAL_COLLECTION</a>.<br>
       </b></font></p>
       </td>
     </tr>
@@ -3843,9 +3653,10 @@ and "regular" runs<br>
     <tr>
       <td colspan="4" width="566">
       <p style="" align="left"> <span style="font-weight: bold;">Collects
-requested number of pedestal events.&nbsp; Make sure pedestals have
-been collected before starting a run in which RoadGrader compression is
-used.&nbsp; Arguments are number of triggers to collect for each ATWD
+requested number of pedestal events.&nbsp; Failure to do this while HV
+is off will result in some level of contamination of real SPE hits from
+the PMT.&nbsp; Arguments are number of triggers to collect for each
+ATWD
 and the FADC (max: 1000 for ATWDs, 2000 for FADC).&nbsp; Message reply
 is sent when pedestals
 are collected.&nbsp; NOTE: #FADC must be &lt;= #ATWD0 + #ATWD1.<br>
@@ -4178,7 +3989,9 @@ This is now done when starting a data taking run (<a
 interleaved with SPE triggers to aid in upstream Splicer-type
 operation.&nbsp; The heartbeat events are "Forced Triggers" (formerly
 known as CPU triggers) and can also be used to form a running pedestal
-average for each ATWD/FADC channel</font></li>
+average for each ATWD/FADC channel (though some small fraction of SPE
+waveforms may be present).<br>
+    </font></li>
   <li><span style="font-weight: bold;">Front end pulser can only be
 started before the run starts</span>, and <span
  style="font-weight: bold;"> can only be used in
